--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,39 @@
+{% extends 'blog/base.html' %}
+<!--
+//消した
+{% load static %}
 <html>
     <head>
         <title>Django Girls blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
     </head>
     <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+        <div class="page-header">
+    <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+-->
+
+{% block content %}
     {% for post in posts %}
-        <div>
+        <div class="post">
             <p>published:{{post.published_date}}</p>
-            <h2><a href="">{{ post.title}}</a></h2>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title}}</a></h2>
             <p>{{post.text|linebreaksbr}}</p>
         </div>
     {% endfor %}
-<!--
+{% endblock %}
+<!--            
+                </div>
+            </div>
+        </div>
+
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My first post</a></h2>
@@ -25,6 +45,7 @@
             <h2><a href="">2番目の投稿</a></h2>
             <p> こんにちは！ よろしくお願いします！ </p>
         </div>
--->
+
     </body>
 </html>
+-->
